--- a/options.html
+++ b/options.html
@@ -50,8 +50,9 @@
 			for (var i=0; i<tree.length; i++) {
 				processBookmarkNode(tree[i]);
 			}
+			$('#groups').attr('size',$('#groups').children().length);
+			restore_options();
 		});
-		restore_options();
 	});
 	</script>
 </head>
